WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307962
[YARR] Fix word boundary assertion corrupting position with surrogate pairs in bytecode interpreter
https://bugs.webkit.org/show_bug.cgi?id=307962
Summary
[YARR] Fix word boundary assertion corrupting position with surrogate pairs i...
Sosuke Suzuki
Reported
2026-02-15 18:39:15 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-02-15 18:45:09 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58771
EWS
Comment 2
2026-02-16 16:54:55 PST
Committed
307677@main
(7f53c2a455ab): <
https://commits.webkit.org/307677@main
> Reviewed commits have been landed. Closing PR #58771 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-02-16 16:55:13 PST
<
rdar://problem/170513949
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug